[project]
name = "masl"
version = "0.1.0"
description = "Melee Action Scripting Language - DSL for scripting SSBM via libmelee"
requires-python = ">=3.10"
license = {text = "GPLv2"}
dependencies = []

[project.optional-dependencies]
runner = ["melee @ git+https://github.com/vladfi1/libmelee"]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
